# moses

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LINUX_MOUNT_TEST.md  README.md  RUST_ANALYZER_FIX.md  UI_PREVIEW_MODERN.html  UI_PREVIEW_NATIVE.html  UI_PREVIEW_THEMES.html  add_errors.txt  check-superblock.sh  debug-ext4.sh  fix-fat16-recognition.md  fix-partition-mount.cmd  fix_errors.rs  package-lock.json  package.json  run-as-admin.bat  test_device_size.sh  test_ntfs_basic.rs  vite.config.ts
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: device.rs  error.rs  filesystem.rs  format.rs  lib.rs  plugin.rs  registry.rs  safety.rs  safety_extensions.rs  safety_os_integration.rs  safety_v2.rs  safety_verification.rs  test_utils.rs
daemon/: Cargo.toml
daemon/src/: lib.rs
filesystems/: Cargo.toml
filesystems/examples/: commodore_1541.rs
filesystems/src/: detection.rs  device_reader.rs  device_writer.rs  diagnostics.rs  error_recovery.rs  lib.rs  ops.rs  ops_helpers.rs  ops_registry.rs  partitioner.rs  registration.rs  test_helpers.rs  utils.rs
filesystems/src/disk_manager/: detector.rs  mod.rs
filesystems/src/exfat/: mod.rs  ops.rs  structures.rs  validator.rs  writer.rs
filesystems/src/ext4_native/: EXT_FAMILY_STRATEGY.md  error_migration_example.rs  mod.rs  ops.rs
filesystems/src/ext4_native/core/: bitmap.rs  checksum.rs  constants.rs  inode_allocator.rs  mod.rs  structures.rs  test_free_blocks_fix.rs  test_golden.rs  test_regression.rs  transaction.rs  types.rs
filesystems/src/ext4_native/reader/: mod.rs
filesystems/src/ext4_native/tests/: phase1_standalone.rs  phase1_tests.rs  phase3_tests.rs  test_backup_superblocks.rs
filesystems/src/ext4_native/validation/: comparator.rs
filesystems/src/ext4_native/windows/: device_io.rs  volume.rs
filesystems/src/ext4_native/writer/: directory.rs  disk_io.rs  disk_io_old.rs  extent_tree.rs  extent_tree_ops.rs  helpers.rs  helpers_old.rs  htree.rs  indirect_blocks.rs  mod.rs  path_resolution.rs
filesystems/src/ext_family/: mod.rs
filesystems/src/families/: mod.rs
filesystems/src/families/ext/: mod.rs
filesystems/src/families/fat/: mod.rs
filesystems/src/families/ntfs/: mod.rs
filesystems/src/fat16/: detection.rs  file_ops.rs  formatter.rs  formatter_compliant.rs  lfn_support.rs  mod.rs  ops.rs  path_resolver.rs  reader.rs  subdirectory_ops.rs  tests.rs  validator.rs  writer.rs
filesystems/src/fat32/: file_ops.rs  formatter.rs  formatter_native.rs  mod.rs  path_resolver.rs  reader.rs  reader_enhanced.rs  validator.rs  writer.rs
filesystems/src/fat_common/: constants.rs  fat_init.rs  long_names.rs  mod.rs  timestamps.rs  validator.rs
filesystems/src/legacy/: ext4_windows.rs  mod.rs
filesystems/src/mount/: fuse.rs  mod.rs  winfsp.rs
filesystems/src/ntfs/: boot_sector.rs  data_runs.rs  directory_creator.rs  error_migration_example.rs  formatter.rs  index_updater.rs  index_writer.rs  mft.rs  mft_writer.rs  mod.rs  ops.rs  ops_rw.rs  ops_rw_v2.rs  path_resolver.rs  reader.rs  resident_converter.rs  resident_data_writer.rs  structures.rs  tests.rs  timestamps.rs  writer.rs  writer_ops.rs  writer_ops.rs.orig  writer_ops.rs.rej
filesystems/tests/: exfat_tests.rs  ext4_compliance_tests.rs  ext4_integration_tests.rs  ext4_stress_tests.rs  ext4_test_suite.rs  ext4_unit_tests.rs  filesystem_integration_tests.rs  integration_tests.rs  ntfs_integration.rs  reader_tests.rs  safety_compliance_tests.rs  safety_tests.rs  test_ext4_simple.rs  test_ntfs_rw.rs  volume_label_test.rs
formatters/: Cargo.toml
formatters/examples/: commodore_1541.rs
formatters/src/: detection.rs  device_reader.rs  diagnostics.rs  diagnostics_improved.rs  exfat.rs  ext4.rs  ext4_linux.rs  ext4_windows.rs  fat32.rs  lib.rs  ntfs.rs  ntfs_windows.rs  partitioner.rs  registration.rs  safe_ext4.rs  utils.rs
formatters/src/disk_manager/: cleaner.rs  converter.rs
formatters/src/exfat/: bitmap.rs  directory_entries.rs  file_operations.rs  formatter_native.rs  mod.rs  reader.rs  reader_aligned.rs  reader_improved.rs  upcase.rs
formatters/src/ext2_native/: mod.rs
formatters/src/ext4_native/: mod.rs
formatters/src/ext4_native/core/: REFACTORING_PLAN.md  alignment.rs  bitmap.rs  checksum.rs  constants.rs  endian.rs  ext_config.rs  formatter.rs  formatter_impl.rs  mod.rs  structures.rs  test_ext_family.rs  test_overflow.rs  tests.rs  types.rs  verify.rs
formatters/src/ext4_native/tests/: mod.rs  (+3 more)
formatters/src/fat16/: comprehensive_validator.rs  fixed_calculation.rs  formatter.rs  formatter_compliant.rs  formatter_fixed.rs  formatter_validator.rs  mod.rs  mod_old.rs  reader.rs  root_directory.rs  spec_compliance_test.rs  system_formatter.rs  tests.rs  ultimate_validator.rs  validation.rs  verifier.rs
formatters/src/fat32/: formatter_native.rs  mod.rs  reader.rs  reader_improved.rs
formatters/src/fat_common/: cluster_calc.rs  cluster_io.rs  directory.rs  fat_table.rs  mod.rs
formatters/src/legacy/: mod.rs
formatters/src/ntfs/: attribute_list.rs  attributes.rs  detector.rs  formatter.rs  index.rs  mft.rs  mft_writer.rs  mod.rs  reader.rs  reader_native.rs  sparse.rs  writer.rs
formatters/src/partitioner/: mbr_tests.rs  mbr_verifier.rs
formatters/tests/: exfat_tests.rs  ext4_reference.rs  integration_tests.rs  reader_tests.rs  safety_compliance_tests.rs  safety_tests.rs  test_ext4_simple.rs  volume_label_test.rs
platform/: Cargo.toml
platform/src/: lib.rs
platform/src/linux/: device.rs  mod.rs
platform/src/macos/: device.rs
platform/src/windows/: device.rs  elevation.rs  mod.rs
platform/tests/: device_enumeration_tests.rs
src-tauri/: Cargo.toml  build.rs  moses-formatter.exe.manifest  moses.exe.manifest  moses.rc  tauri.conf.json
src-tauri/linux/: moses.desktop
src-tauri/macos/: entitlements.plist
src-tauri/nsis/: installer.nsi
src-tauri/src/: filesystem_cache.rs  lib.rs  logging.rs  main.rs  worker_server.rs
src-tauri/src/commands/: disk_management.rs  disk_management_socket.rs  filesystem.rs  mod.rs
src-tauri/wix/: main.wxs
src-tauri/wix/fragments/: winfsp.wxs
(+216 files in other folders)
