[workspace]
members = [
    "core",
    "daemon",
    "cli",
    "formatters",
    "platform",
]
exclude = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Moses Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/onuse/moses"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true