[package]
name = "moses-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "moses"
path = "src/main.rs"

[dependencies]
moses-core = { path = "../core" }
moses-platform = { path = "../platform" }
moses-filesystems = { path = "../filesystems" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
mount-windows = ["moses-filesystems/mount", "moses-filesystems/mount-windows"]
mount-unix = ["moses-filesystems/mount", "moses-filesystems/mount-unix"]