[package]
name = "moses-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
uuid = { version = "1.5", features = ["v4", "serde"] }
tokio = { workspace = true }
which = "6.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_Security",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["fs", "mount"] }
procfs = "0.16"