[package]
name = "moses-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
moses-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }