[package]
name = "moses-filesystems"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
legacy = []  # Enable legacy formatter implementations (not recommended)
mount-windows = ["winfsp", "winfsp-sys"]  # Windows mounting support
mount-unix = ["fuser"]  # Unix mounting support
mount = []  # Generic mount feature

[dependencies]
moses-core = { path = "../core" }
async-trait = "0.1"
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
which = "6.0"
crc32c = "0.6"
byteorder = "1.4"
static_assertions = "1.1"
hex = "0.4"
crc32fast = "1.5.0"
log = "0.4"
uuid = { version = "1.11", features = ["v4"] }
tempfile = "3.8"
env_logger = "0.11"
rand = "0.8"
chrono = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt", "handleapi", "ioapiset", "winioctl", "errhandlingapi", "winbase", "minwindef", "securitybaseapi", "processthreadsapi"] }
winfsp = { version = "0.11", optional = true }
winfsp-sys = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["user"] }
fuser = { version = "0.14", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
env_logger = "0.11"
