[package]
name = "moses-formatters"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
moses-core = { path = "../core" }
async-trait = "0.1"
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
which = "6.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["user"] }

[dev-dependencies]
tokio-test = "0.4"