[package]
name = "moses-formatters"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
legacy = []  # Enable legacy formatter implementations (not recommended)

[dependencies]
moses-core = { path = "../core" }
async-trait = "0.1"
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
which = "6.0"
crc32c = "0.6"
byteorder = "1.4"
static_assertions = "1.1"
hex = "0.4"
crc32fast = "1.5.0"
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt", "handleapi", "ioapiset", "winioctl", "errhandlingapi", "winbase", "minwindef"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["user"] }

[dev-dependencies]
tokio-test = "0.4"
