[package]
name = "moses"
version = "0.1.0"
description = "Moses - Cross-Platform Drive Formatter"
authors = ["Moses Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/moses"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "moses_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
moses-core = { path = "../core" }
moses-platform = { path = "../platform" }
moses-formatters = { path = "../formatters" }
tokio = { version = "1.34", features = ["full"] }
