[package]
name = "moses"
version = "0.1.0"
description = "Moses - Cross-Platform Drive Formatter"
authors = ["Moses Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/moses"
edition = "2021"
rust-version = "1.77.2"
default-run = "moses"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "moses_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "moses"
path = "src/main.rs"

[[bin]]
name = "moses-worker"
path = "src/bin/moses-elevated-worker.rs"

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
lazy_static = "1.4"
chrono = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
futures = "0.3"
moses-core = { path = "../core" }
moses-platform = { path = "../platform" }
moses-formatters = { path = "../formatters" }
tokio = { version = "1.34", features = ["full"] }
once_cell = "1.19"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
